# prompt-rs

./: .gitignore  Cargo.toml  README.md  time_in_ms.bash
prompt-rs/: Cargo.toml
prompt-rs/src/: main.rs
prompt-zsh/: generate-prompt.zsh
src/: main.rs
