[package]
name = "prompt-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.3"
anyhow = "1.0"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.bench]
codegen-units = 1
lto = "thin"
