[package]
name = "prompt-rs"
version = "0.1.0"
authors = ["Wojciech Bartnik <yisonPylkita@gmail.com"]
edition = "2018"

[dependencies]
hostname = "0.3"
chrono = { version = "0.4", features = ["unstable-locales"] }
# Default features in git2 are SSH and SSL and with them enabled repo handle
# initialization takes 5 milliseconds. With them disabled it takes 100
# microseconds. So unless I need them they shall stay disabled
git2 = { version = "0.13", default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"

[profile.bench]
codegen-units = 1
lto = "thin"
